--- a/index.html
+++ b/index.html
@@ -1,6 +1,39 @@
-<doctype.html>
-  <html>
-    <body>
-      <a href="https://drive.google.com/drive/folders/1AslTEwPPf9fGi2B5mpIh3TmQ3RGZl_4d?usp=sharing">Movies here!</a>
-    </body>
-  </html>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {margin:25px;}
+
+div.polaroid {
+  width: 80%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
+}
+</style>
+</head>
+<body>
+
+<div class="polaroid">
+  <img src="Alt.png" alt="5 Terre" style="width:100%">
+  <div class="container">
+  <p>All of us are dead S1</p>
+  </div>
+</div>
+
+<div class="polaroid">
+  <img src="lights600x400.jpg" alt="Norther Lights" style="width:100%">
+  <div class="container">
+  <p>Northern Lights</p>
+  </div>
+</div>
+
+</body>
+</html>
+
+
