--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ div.container {
 <body>
 
 <div class="polaroid">
-  <img src="Alt.png" alt="5 Terre" style="width:100%">
+  <img src="All.png" alt="5 Terre" style="width:100%">
   <div class="container">
   <p>All of us are dead S1</p>
   </div>
