--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ body {margin:25px;}
 
 div.polaroid {
   width: 80%;
+  height: 1600px;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
