--- a/index.html
+++ b/index.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-body {margin:25px;}
-
-div.polaroid {
-  width: 80%;
-  height: 1600px;
-  background-color: white;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 25px;
-}
-
-div.container {
-  text-align: center;
-  padding: 10px 20px;
-}
-</style>
-</head>
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
-<div class="polaroid">
-  <img src="All.png" alt="5 Terre" style="width:100%">
-  <div class="container">
-  <p>All of us are dead S1</p>
+<div class="w3-container">
+  <h2>Image as a Card</h2>
+  <p>Wrap any of the w3-card classes around the image to display it as a card:</p>
+  <div class="w3-card" style="width:50%">
+    <img src="All.png" alt="Person" style="width:100%">
+    <div class="w3-container">
+      <h4><b>Simon</b></h4>
+      <p>The boss of all bosses</p>
+    </div>
   </div>
-</div>
+  <br>
 
-<div class="polaroid">
-  <img src="lights600x400.jpg" alt="Norther Lights" style="width:100%">
-  <div class="container">
-  <p>Northern Lights</p>
+  <p>More shadows:</p>
+  <div class="w3-card-4" style="width:50%">
+    <img src="All.png" alt="Person" style="width:100%">
+    <div class="w3-container">
+      <h4><b>Jane</b></h4>
+      <p>The other boss</p>
+    </div>
   </div>
 </div>
 
 </body>
 </html>
-
-
