--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h2>Image as a Card</h2>
   <p>Wrap any of the w3-card classes around the image to display it as a card:</p>
   <div class="w3-card" style="width:50%">
-    <img src="All.png" alt="Person" style="width:100%">
+    <img src="All.png" alt="Person">
     <div class="w3-container">
       <h4><b>Simon</b></h4>
       <p>The boss of all bosses</p>
