--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-<h2>The picture Element</h2>
-
-<picture>
-  <source media="(min-width: 650px)" srcset="img_food.jpg">
-  <source media="(min-width: 465px)" srcset="img_car.jpg">
-  <img src="All.png" style="width:auto;">
-</picture>
-
+  <style>
+    img {
+    height: 200px;
+      width: 100px;
+    }
+  </style>
+<img src="All.png">
 </body>
 </html>
 
