--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       width: 400px;
     }
   </style>
-  <a href="#"><img src="All.png"></a>
+  <a href="Allofus.html"><img src="All.png"></a>
 </body>
 </html>
 
