--- a/Allofus.html
+++ b/Allofus.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/x-icon" href="All.png">
 </head>
 <body>
-  <a href="">Episode 1</a>
+  <a href="1.html">Episode 1</a>
 
 </body>
 </html>
