--- a/Allofus.html
+++ b/Allofus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Page Title</title>
+  <title>All of us are dead</title>
   <link rel="icon" type="image/x-icon" href="All.png">
 </head>
 <body>
