--- a/Allofus.html
+++ b/Allofus.html
@@ -2,10 +2,8 @@
 <html>
 <head>
   <title>All of us are dead</title>
-  <link rel="icon" type="image/x-icon" href="All.png">
 </head>
 <body>
-  <a href="https://drive.google.com/drive/folders/1aVb1hi41pFIaF3UYcJMBcF8L6YqPz8ha">Episode 1</a>
-
+  <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing">Episode1</a>
 </body>
 </html>
