--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     }
   </style>
   <a href="Allofus.html"><img src="All.png"></a>
+  <a href="Peaky.html"><img src="Peakyblinders.png"></a>
 </body>
 </html>
 
