--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     }
   </style>
   <a href="Allofus.html"><img src="All.png"></a>
-  <a href="Peaky.html"><img src="Peakyblinders.png"></a>
+  <a href="peaky.html"><img src="peakyblinders.png"></a>
 </body>
 </html>
 
