--- a/peaky.html
+++ b/peaky.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html> 
 <html> 
 <body> 
-
-<video width="400" controls>
-  <source src=".mp4" type="video/mp4">
-</video>
-
-<p>
-Video courtesy of 
-<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
-</p>
-
+  <a href="#">Season 1</a>
+  
+   <a href="#">Season 2</a>
+  
 </body> 
 </html>
 
