--- a/peaky.html
+++ b/peaky.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html> 
 <html> 
-<body> 
+  <title>Peaky Blinders</title>
+   <link rel="icon" type="image/x-icon" href="netflix.jpg">
+
+<body>
+  
   <a href="#">Season 1</a>
   
    <a href="#">Season 2</a>
