--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
   <style>
+      body {
+         background-color: lightgrey; 
+      }
     img {
-    height: 600px;
+    height: 550px;
       width: 400px;
     }
   </style>
