--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       width: 400px;
     }
   </style>
+    <video width="1080" controls>
+  <source src="sukhe.mp4" type="video/mp4">
+  Your browser does not support HTML video.
+</video>
+
   <a href="Allofus.html"><img src="All.png"></a>
   <a href="peaky.html"><img src="peakyblinders.png"></a>
 </body>
