--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     height: 550px;
       width: 400px;
     }
+      video {
+          height: 50px;
+          width: 1080px;
+      }
   </style>
-    <video width="1080" controls>
+    <video controls>
   <source src="sukhe.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
