--- a/index.html
+++ b/index.html
@@ -14,16 +14,12 @@
     height: 550px;
       width: 400px;
     }
-      video {
-          height: 50px;
-          width: 1080px;
-      }
   </style>
-    <video controls>
+    <video width="320" height="240" autoplay>
   <source src="sukhe.mp4" type="video/mp4">
-  Your browser does not support HTML video.
-</video>
-
+  <source src="sukhe.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video><br>
   <a href="Allofus.html"><img src="All.png"></a>
   <a href="peaky.html"><img src="peakyblinders.png"></a>
 </body>
