--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="netflix.jpg">
-
+    <title>Netflix</title>
 </head>
 <body>
   <style>
@@ -15,11 +15,6 @@
       width: 400px;
     }
   </style>
-    <video width="320" height="240" autoplay>
-  <source src="sukhe.mp4" type="video/mp4">
-  <source src="sukhe.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video><br>
   <a href="Allofus.html"><img src="All.png"></a>
   <a href="peaky.html"><img src="peakyblinders.png"></a>
 </body>
