--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
       width: 400px;
     }
   </style>
+    <h2>All</h2>
   <a href="Allofus.html"><img src="All.png"></a>
-  <a href="peaky.html"><img src="peakyblinders.png"></a>
+  <a href="peaky.html"><img src="peakyblinders.png"></a><br><br>
+    <h2>Recommend</h2>
+     <a href="Allofus.html"><img src="All.png"></a>
 </body>
 </html>
 
