--- a/Allofus.html
+++ b/Allofus.html
@@ -6,9 +6,9 @@
 
 </head>
 <body>
-    <iframe width="800" height="315" src="https://www.youtube.com/embed/IN5TD4VRcSM?autoplay=1&mute=1">
+    <iframe width"640" height="315" src="https://www.youtube.com/embed/IN5TD4VRcSM?autoplay=1&mute=1">
   </iframe>
-    
+ <br>   
   <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing">Episode1</a>
 </body>
 </html>
