--- a/Allofus.html
+++ b/Allofus.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>All of us are dead</title>
-   <link rel="icon" type="image/x-icon" href="netflix.jpg">
-
-</head>
-<body>
-    <iframe width"1280" height="315" src="https://www.youtube.com/embed/IN5TD4VRcSM?autoplay=1&mute=1">
-  </iframe><br>
-    
-  <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing">Episode1</a>
-</body>
-</html>
+ <html>
+  <head>
+    <title>All of us are dead</title>
+      <link rel="icon" type="image/x-icon" href="netflix.jpg">
+        </head>
+          <body>
+            <style>
+               body {
+                 background-color: lightgrey;
+                  }
+                    iframe {
+                      height: 300px;
+                        width: 1280px;
+                          }
+                           </style>
+                              <iframe src="https://www.youtube.com/embed/IN5TD4VRcSM?autoplay=1&mute=1">
+                                 </iframe><br>
+                                      <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing">Episode1</a>
+                                        </body>
+                                          </html>
