--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
       body {
          background-color: lightgrey; 
       }
-    img {
+    .card {
     height: 550px;
       width: 400px;
     }
   </style>
     <h2>All</h2>
-  <a href="Allofus.html"><img src="All.png"></a>
-  <a href="peaky.html"><img src="peakyblinders.png"></a><br><br>
-    <h2>Recommend</h2>
-     <a href="Allofus.html"><img src="All.png"></a>
+       <a href="Allofus.html"><div class="card">
+  <img src=".png" alt="Avatar">
+  <div class="container">
+    <h4><b>John Doe</b></h4> 
+    <p>Architect & Engineer</p> 
+  </div>
+           </div></a>
 </body>
 </html>
 
