--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
     <h2>All</h2>
        <a href="Allofus.html"><div class="card">
-  <img src=".png" alt="Avatar">
+  <img src="All.png" alt="Avatar">
   <div class="container">
     <h4><b>John Doe</b></h4> 
     <p>Architect & Engineer</p> 
