--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
       body {
          background-color: lightgrey; 
       }
-    }
+    
   </style>
     <h2>All</h2>
-     
+     <div class="polaroid">
+         <a href="Allofus.html"><img src="All.png" alt="5 Terre" style="width:100%"></a>
+  <div class="container">
+  <p>Cinque Terre</p>
+  </div>
+</div>
 </body>
 </html>
 
