--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
       body {
          background-color: lightgrey; 
       }
-    
+    div.polaroid {
+  width: 80%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
+}
   </style>
     <h2>All</h2>
      <div class="polaroid">
