--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
          background-color: lightgrey; 
       }
     div.polaroid {
-  width: 80%;
+  width: 800px;
+        height: 515px;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
