--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@ div.container {
      <div class="polaroid">
          <a href="Allofus.html"><img src="All.png" alt="5 Terre" style="width:100%"></a>
   <div class="container">
-  <p>Cinque Terre</p>
+  </div>
+</div>
+     <div class="polaroid">
+         <a href="peakyblinders.html"><img src="All.png" alt="5 Terre" style="width:100%"></a>
+  <div class="container">
   </div>
 </div>
 </body>
