--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ div.container {
          <a href="Allofus.html"><img src="All.png" alt="5 Terre" style="width:100%"></a>
   <div class="container">
   </div>
-</div>
+</div> <br>
      <div class="polaroid">
-         <a href="peakyblinders.html"><img src="All.png" alt="5 Terre" style="width:100%"></a>
+         <a href="peaky.html"><img src="peakyblinders.png" alt="5 Terre" style="width:100%"></a>
   <div class="container">
   </div>
 </div>
