--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
          background-color: lightgrey; 
       }
     div.polaroid {
-  width: 27px;
-        height: 40px;
+  width: 54px;
+        height: 80px;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
@@ -26,12 +26,12 @@ div.container {
     <h2>All</h2>
      <div class="polaroid">
          <a href="Allofus.html"><img src="All.png" alt="5 Terre" style="width:100%"></a>
-  <div class="container">
+         <div class="container"><p>All of us are dead</p>
   </div>
 </div> <br>
      <div class="polaroid">
          <a href="peaky.html"><img src="peakyblinders.png" alt="5 Terre" style="width:100%"></a>
-  <div class="container">
+  <div class="container"><p>Peaky Blinders</p>
   </div>
 </div>
 </body>
