--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 <body>
   <style>
-     
+     .carouselExampleFade {
+         height: 400px;
+         width: 270px;
+         
+      }
   </style>
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
