--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div class="card" style="width: 18rem;">
-    <a href="All.png"><img src="..." class="card-img-top" alt="ntnh"></a>
+    <a href="Allofus.html"><img src="All.png" class="card-img-top" alt="ntnh"></a>
   <div class="card-body">
     <h5 class="card-title">All of us are dead</h5>
     
