--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
       
   </style>
 <body>
-
-<div class="card" style="width: 18rem;">
-    <a href="Allofus.html"><img src="All.png" class="card-img-top" alt="ntnh"></a>
+    <div class="card" style="width: 18rem;">
+  <img src="All.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">All of us are dead</h5>
-    
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
 </div>
 </body>
