--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
      <style>
+         body {
+                      background-color: lightgrey;
+         }
      
       
   </style>
 <body>
    <div class="card" style="width: 18rem;">
        <a href="Allofus.html"><img src="All.png" class="card-img-top" alt="..."></a>
+  <div class="card-body">
+    <h5 class="card-title">All of us are dead</h5>
+   
+  </div>
+</div>
+     <div class="card" style="width: 18rem;">
+       <a href="peaky.html"><img src="peakyblinders.png" class="card-img-top" alt="..."></a>
   <div class="card-body">
     <h5 class="card-title">All of us are dead</h5>
    
