--- a/Allofus.html
+++ b/Allofus.html
@@ -3,6 +3,7 @@
   <head>
     <title>All of us are dead</title>
       <link rel="icon" type="image/x-icon" href="netflix.jpg">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </head>
           <body>
             <style>
@@ -11,7 +12,7 @@
                   }
                     iframe {
                       height: 300px;
-                        width: 1050px;
+                        width: 1100px;
                           }
                            </style>
                               <iframe src="https://www.youtube.com/embed/IN5TD4VRcSM?autoplay=1&mute=1">
