--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                       background-color: lightgrey;
          }
      .Allofus   {
-         height: 400;
-         width: 270;
+         height: 320;
+         width: 216;
          }
   </style>
 <body>
-    <a class="Allofus" href="Allofus.html"><img src="All.png"></a>
-    <a class="Allofus" href="peaky.html"><img src="peakyblinders.png"></a>
+    <div><a class="Allofus" href="Allofus.html"><img src="All.png"></a><h3>All of us are dead</h3></div>
+    <div><a class="Allofus" href="peaky.html"><img src="peakyblinders.png"></a><h3>Peaky Blinders</h3></div> 
     
 </body>
 </html>
