--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
          }
   </style>
 <body>
-    <div><a class="Allofus" href="Allofus.html"><img src="All.png"></a><h3>All of us are dead</h3></div>
-    <div><a class="Allofus" href="peaky.html"><img src="peakyblinders.png"></a><h3>Peaky Blinders</h3></div> 
+  <a class="Allofus" href="Allofus.html"><img src="All.png"></a>
+  <a class="Allofus" href="peaky.html"><img src="peakyblinders.png"></a>
     
 </body>
 </html>
