--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
      <style>
-         body {
-                      background-color: lightgrey;
+                body {
+  background-image: url("gradient_bg.png");
+  background-repeat: repeat-x;
+                    .blur {filter: blur(4px);}
          }
      .Allofus   {
          height: 280;
