--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
      <style>
                 body {
-  background-image: url("gradient_bg.png");
+  background-image: url("All.png");
   background-repeat: repeat-x;
                     .blur {filter: blur(4px);}
          }
