--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <style>
                 body {
   background-image: url("All.png");
-  background-repeat: repeat-x;
+  background-repeat: no-repeat;
                     .blur {filter: blur(4px);}
          }
      .Allofus   {
