--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
                 body {
   background-image: url("All.png");
   background-repeat: no-repeat;
-                    .blur {filter: blur(4px);}
+                    
          }
+         body.blur {filter: blur(4px);}
      .Allofus   {
          height: 500;
          width: 135;
