--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="netflix.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-      Netfllix
+      <img src="netflix.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      Netflix
     </a>
   </div>
 </nav>    
