--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
      <style>
                     
-                   img  {
+                   #demo  {
   width: 210px;
   height: 400;
   background-color: white;
@@ -29,8 +29,8 @@
   </div>
 </nav>
     
-    <a href="#"><img href="All.png"></a>
-      <a href="#"><img href="peakyblinders.png"></a> 
+    <a href="#"><img id="demo" href="All.png"></a>
+      <a href="#"><img id="demo" href="peakyblinders.png"></a> 
 </body>
 </html>
 
