--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </div>
 </nav>
     
-    <a href="#"><img id="demo" href="All.png"></a>
-      <a href="#"><img id="demo" href="peakyblinders.png"></a> 
+    <img id="demo" href="All.png">
+    <img id="demo" href="peakyblinders.png">
 </body>
 </html>
 
