--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Netflix
     </a>
   </div>
-</nav>
+</nav> <br>
     
     <img id="demo" href="All.png">
     <img id="demo" href="peakyblinders.png">
