--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       Netflix
     </a>
   </div>
-</nav> <br>
+</nav>
+    <img src="All.png" alt="Flowers in Chania" width="100" height="200">
+    <img src="All.png" alt="Flowers in Chania" width="100" height="200">
 </body>
 </html>
 
