--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
      <style>
                     
-                   #demo  {
+                   .demo  {
   width: 210px;
   height: 400;
   background-color: white;
@@ -28,8 +28,8 @@
     </a>
   </div>
 </nav>
-    <img src="All.png" alt="Flowers in Chania" width="100" height="200">
-    <img src="All.png" alt="Flowers in Chania" width="100" height="200">
+    <img class="demo"  src="All.png" alt="Flowers in Chania">
+    <img  class="demo" src="peakyblinders.png" alt="Flowers in Chania">
 </body>
 </html>
 
