--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     </a>
   </div>
 </nav><br><br>
-    <img class="demo"  src="All.png" alt="Flowers in Chania">
-    <img  class="demo" src="peakyblinders.png" alt="Flowers in Chania">
+    <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
+    <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
+     <a href="#"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
 </body>
 </html>
 
