--- a/Allofus.html
+++ b/Allofus.html
@@ -4,11 +4,14 @@
     <title>All of us are dead</title>
       <link rel="icon" type="image/x-icon" href="netflix.jpg">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+   
         </head>
           <body>
             <style>
                body {
-                 background-color: lightgrey;
+                 background-color: white;
                   }
                     iframe {
                       height: 300px;
@@ -17,6 +20,7 @@
                            </style>
                               <iframe src="https://www.youtube.com/embed/IN5TD4VRcSM?autoplay=1&mute=1">
                                  </iframe><br>
-                                      <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing">Episode1</a>
+                                      
+           <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing"><button type="button" class="btn btn-light">Episode1</button></a>
                                         </body>
                                           </html>
