--- a/Allofus.html
+++ b/Allofus.html
@@ -11,16 +11,18 @@
           <body>
             <style>
                body {
-                 background-color: white;
+                 background-color: Black;
                   }
                     iframe {
                       height: 300px;
-                        width: 1100px;
+                        width: 1500px;
                           }
                            </style>
                               <iframe src="https://www.youtube.com/embed/IN5TD4VRcSM?autoplay=1&mute=1">
-                                 </iframe><br>
+                                 </iframe><br><br>
                                       
            <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing"><button type="button" class="btn btn-light">Episode1</button></a>
+            <br>
+           <a href=" <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing"><button type="button" class="btn btn-light">Episode1</button></a>"><button type="button" class="btn btn-light">Episode1</button></a>
                                         </body>
                                           </html>
