--- a/peaky.html
+++ b/peaky.html
@@ -4,13 +4,14 @@
    <link rel="icon" type="image/x-icon" href="netflix.jpg">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  
+  <style>
+    *  {
+                 background-color: Black;
+    }
+  </style>
 <body>
-  body {
-           background-color: lightgrey;
-  }
   
-   <a href="season1.html" class="link-dark">Dark link</a>
+   <a href="season1.html" class="link-dark">Season1</a>
   
 </body> 
 </html>
