--- a/Allofus.html
+++ b/Allofus.html
@@ -11,10 +11,10 @@
           <body>
             <style>
                body {
-                 background-color: Black;
+                 background-color: White;
                   }
                     iframe {
-                      height: 300px;
+                      height: 215px;
                         width: 1500px;
                           }
                            </style>
@@ -23,6 +23,6 @@
                                       
            <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing"><button type="button" class="btn btn-light">Episode1</button></a>
             <br>
-           <a href=" <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing"><button type="button" class="btn btn-light">Episode1</button></a>"><button type="button" class="btn btn-light">Episode1</button></a>
+     <a href="https://drive.google.com/file/d/1I30w15W8FIHm301Tkhf_vObU1-QDKmaF/view?usp=sharing"><button type="button" class="btn btn-light">Episode2</button></a>
                                         </body>
                                           </html>
