--- a/peaky.html
+++ b/peaky.html
@@ -6,13 +6,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <style>
     *  {
-                 background-color: Black;
+                 background-color: White;
     }
   </style>
 <body>
-  
-   <a href="season1.html" class="link-dark">Season1</a>
-  
+  <a href="season1.html"><button type="button" class="btn btn-light">Season-1</button></a>season1.html
 </body> 
 </html>
 
