--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          }
                    .demo  {
   width: 210px;
-  height: 400px;
+  height: 360px;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
@@ -28,7 +28,7 @@
 <body>
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="https://github.com/Shujaat09/movies.github.io/edit/main/index.html">
       <img src="netflix.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
       Netflix
     </a>
@@ -37,6 +37,7 @@
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
     <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
      <a href="#"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
+     <a href="#"><img  class="demo" src=Train.png" alt="Flowers in Chania"></a>
 </body>
 </html>
 
