--- a/peaky.html
+++ b/peaky.html
@@ -10,7 +10,8 @@
     }
   </style>
 <body>
-  <a href="season1.html"><button type="button" class="btn btn-light">Season-1</button></a>season1.html
+  <br><br>
+  <a href="season1.html"><button type="button" class="btn btn-light">Season-1</button></a>
 </body> 
 </html>
 
