--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
     <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
      <a href="#"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
-     <a href="#"><img  class="demo" src=Train.png" alt="Flowers in Chania"></a>
+      <a href="#"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
 </body>
 </html>
 
