--- a/season1.html
+++ b/season1.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html> 
-<html> 
+<html>
+  <head>
+    
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </head>
 <body> 
   <a href="https://drive.google.com/file/d/1x_Wb3zuY8hdEH2ULpm7uatMymb0jnTeT/view?usp=sharing">Episode 1</a>
   
-   <a href="#">Episode 2</a>
+  
+  
+
+  
+  
+  
   
 </body> 
 </html>
