--- a/season1.html
+++ b/season1.html
@@ -6,8 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </head>
 <body> 
-  <a href="https://drive.google.com/file/d/1x_Wb3zuY8hdEH2ULpm7uatMymb0jnTeT/view?usp=sharing">Episode 1</a>
-  
+   <a href="https://drive.google.com/file/d/1x_Wb3zuY8hdEH2ULpm7uatMymb0jnTeT/view?usp=sharing"><button type="button" class="btn btn-light">Episode-1</button></a>
   
   
 
