--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="https://github.com/Shujaat09/movies.github.io/edit/main/index.html">
+    <a class="navbar-brand" href="#">
       <img src="netflix.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
       Netflix
     </a>
