--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
      <a href="#"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
       <a href="#"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
+    <a href="#"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
 </body>
 </html>
 
