--- a/Squid.html
+++ b/Squid.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Page Title</title>
+  <link rel="icon" type="image/x-icon" href="netflix.jpg">
+</head>
+<body>
 
+
+</body>
+</html>
