--- a/The.html
+++ b/The.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
   <title>The Conjuring</title>
   <link rel="icon" type="image/x-icon" href="netflix.jpg">
+  
+  
 </head>
 <body>
-                 
+  <p>Coming Soon...</p>               
 </body>
 </html>
