--- a/Train.html
+++ b/Train.html
@@ -5,9 +5,18 @@
   <link rel="icon" type="image/x-icon" href="netflix.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</head>
-<body>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <p>Coming soon</p>
+
+  </head>
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+  </style>
+<body>
+<img src="Train.png" alt="Paris">
 </body>
 </html>
