--- a/Train.html
+++ b/Train.html
@@ -11,6 +11,8 @@
   </head>
 <style>
 img {
+  width: 210px;
+  height: 360px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -18,5 +20,7 @@ img {
   </style>
 <body>
 <img src="Train.png" alt="Paris">
+  <br><br>
+  <a href="#"><button type="button" class="btn btn-primary">Watch Now</button></a>
 </body>
 </html>
