--- a/Train.html
+++ b/Train.html
@@ -17,6 +17,11 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+  a {
+         display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
   </style>
 <body>
 <img src="Train.png" alt="Paris">
