--- a/Train.html
+++ b/Train.html
@@ -11,13 +11,13 @@
   </head>
 <style>
 img {
-  width: 70px;
-  height: 120px;
+  width: 140px;
+  height: 240px;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
-  a {
+  .btn btn-primary {
          display: block;
   margin-left: auto;
   margin-right: auto;
