--- a/Fire.html
+++ b/Fire.html
@@ -8,6 +8,8 @@
   
 </head>
 <body>
-
+  <img src="Fire.png" alt="Paris">
+  <br><br>
+  <a href="https://drive.google.com/file/d/1IlIQuZCVFcfri4udMf2hIPO-tlWCXrzu/view"><button type="button" class="btn btn-primary">Watch Now</button></a>
 </body>
 </html>
