--- a/Fire.html
+++ b/Fire.html
@@ -8,8 +8,23 @@
   
 </head>
 <body>
+    </head>
+<style>
+img {
+  width: 140px;
+  height: 240px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+  .btn btn-primary {
+         display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
+  </style>
   <img src="Fire.png" alt="Paris">
   <br><br>
-  <a href="https://drive.google.com/file/d/1IlIQuZCVFcfri4udMf2hIPO-tlWCXrzu/view"><button type="button" class="btn btn-primary">Watch Now</button></a>
+  <a href="https://drive.google.com/file/d/19AJoiv0mGoDQyQ5CK1jGb03w-tOYRJIM/view?usp=sharing"><button type="button" class="btn btn-primary">Watch Now</button></a>
 </body>
 </html>
