--- a/Squid.html
+++ b/Squid.html
@@ -9,6 +9,15 @@
   
 </head>
 <body>
+  <style>
+               body {
+                 background-color: White;
+                  }
+                    iframe {
+                      height: 350px;
+                        width: 1500px;
+                          }
+                           </style>
   <iframe src="https://www.youtube.com/embed/oqxAJKy0ii4?autoplay=1&mute=1">
                                  </iframe><br><br>
 
