--- a/The.html
+++ b/The.html
@@ -10,6 +10,9 @@
   
 </head>
 <body>
-  <p>Coming Soon...</p>               
+ <img src="The.png" alt="Paris">
+  <br><br>
+  <a href="https://drive.google.com/file/d/13kp92vw504G0sY-4rQIgf6ElP3MILXfg/view?usp=sharing"><button type="button" class="btn btn-primary">Watch Now</button></a>
+</body>            
 </body>
 </html>
