--- a/The.html
+++ b/The.html
@@ -10,9 +10,22 @@
   
 </head>
 <body>
+  <style>
+img {
+  width: 140px;
+  height: 240px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+  .btn btn-primary {
+         display: block;
+  margin-left: auto;
+  margin-right: auto;
+  }
+  </style>
  <img src="The.png" alt="Paris">
   <br><br>
   <a href="https://drive.google.com/file/d/13kp92vw504G0sY-4rQIgf6ElP3MILXfg/view?usp=sharing"><button type="button" class="btn btn-primary">Watch Now</button></a>
 </body>            
-</body>
 </html>
