--- a/Squid.html
+++ b/Squid.html
@@ -21,6 +21,7 @@
   <iframe src="https://www.youtube.com/embed/oqxAJKy0ii4?autoplay=1&mute=1">
                                  </iframe><br><br>
   <a href="https://drive.google.com/file/d/156eXnTnHO09bPrZmnFRqad9n_I68Ax1G/view?usp=sharing"><button type="button" class="btn btn-light">Episode-1</button></a>
-
+<br><br>
+  <a href="https://drive.google.com/file/d/1saMk5yJrQfPQ6HfETukRF_fh0y6OOHR1/view?usp=sharing"><button type="button" class="btn btn-light">Episode-2</button></a>
 </body>
 </html>
