--- a/Squid.html
+++ b/Squid.html
@@ -23,5 +23,20 @@
   <a href="https://drive.google.com/file/d/156eXnTnHO09bPrZmnFRqad9n_I68Ax1G/view?usp=sharing"><button type="button" class="btn btn-light">Episode-1</button></a>
 <br><br>
   <a href="https://drive.google.com/file/d/1saMk5yJrQfPQ6HfETukRF_fh0y6OOHR1/view?usp=sharing"><button type="button" class="btn btn-light">Episode-2</button></a>
+  <br><br>
+   <a href="https://drive.google.com/file/d/1hh19tLr3eKDIgxQeuCKPiXafDnQub6Lg/view?usp=sharing"><button type="button" class="btn btn-light">Episode-3</button></a>
+  <br><br>
+   <a href=""><button type="button" class="btn btn-light">Episode-4</button></a>
+  <br><br>
+   <a href=""><button type="button" class="btn btn-light">Episode-5</button></a>
+  <br><br>
+   <a href=""><button type="button" class="btn btn-light">Episode-6</button></a>
+  <br><br>
+   <a href=""><button type="button" class="btn btn-light">Episode-7</button></a>
+  <br><br>
+   <a href=""><button type="button" class="btn btn-light">Episode-8</button></a>
+  <br><br>
+   <a href=""><button type="button" class="btn btn-light">Episode-9</button></a>
+  <br><br>
 </body>
 </html>
