--- a/Squid.html
+++ b/Squid.html
@@ -26,17 +26,17 @@
   <br><br>
    <a href="https://drive.google.com/file/d/1hh19tLr3eKDIgxQeuCKPiXafDnQub6Lg/view?usp=sharing"><button type="button" class="btn btn-light">Episode-3</button></a>
   <br><br>
-   <a href=""><button type="button" class="btn btn-light">Episode-4</button></a>
+   <a href="https://drive.google.com/file/d/1i-5TfeZRyh6GtjNP6ln6bq1HoHwMQnv4/view?usp=sharing"><button type="button" class="btn btn-light">Episode-4</button></a>
   <br><br>
-   <a href=""><button type="button" class="btn btn-light">Episode-5</button></a>
+   <a href="https://drive.google.com/file/d/1pa5oIipo--6M1T871xVPmsqv9bovNmKG/view?usp=sharing"><button type="button" class="btn btn-light">Episode-5</button></a>
   <br><br>
-   <a href=""><button type="button" class="btn btn-light">Episode-6</button></a>
+   <a href="https://drive.google.com/file/d/1z5-Y45CP3eDGFHilwUlWGBHI_IJAyI7y/view?usp=sharing"><button type="button" class="btn btn-light">Episode-6</button></a>
   <br><br>
-   <a href=""><button type="button" class="btn btn-light">Episode-7</button></a>
+   <a href="https://drive.google.com/file/d/1sigTu0k0UaawMfEdonUMTjEDGLtWQ9lp/view?usp=sharing"><button type="button" class="btn btn-light">Episode-7</button></a>
   <br><br>
-   <a href=""><button type="button" class="btn btn-light">Episode-8</button></a>
+   <a href="https://drive.google.com/file/d/1NFLKoCGU3oyYdJhHy-MAIuNpRHUP_3n4/view?usp=sharing"><button type="button" class="btn btn-light">Episode-8</button></a>
   <br><br>
-   <a href=""><button type="button" class="btn btn-light">Episode-9</button></a>
+   <a href="https://drive.google.com/file/d/1gXsuKb5ANELe9vd7wjP0mYfeZ8yrcb-5/view?usp=sharing"><button type="button" class="btn btn-light">Episode-9</button></a>
   <br><br>
 </body>
 </html>
