--- a/Money.html
+++ b/Money.html
@@ -10,6 +10,18 @@
   
 </head>
 <body>
-
+<br><br>
+  <a href="#"><button type="button" class="btn btn-light">Episode-1</button></a>
+  <br><br>
+   <a href="#"><button type="button" class="btn btn-light">Episode-2</button></a>
+  <br><br>
+   <a href="#"><button type="button" class="btn btn-light">Episode-3</button></a>
+  <br><br>
+  <a href="#"><button type="button" class="btn btn-light">Episode-4</button></a>
+  <br><br>
+   <a href="#"><button type="button" class="btn btn-light">Episode-5</button></a>
+  <br><br>
+   <a href="#"><button type="button" class="btn btn-light">Episode-6</button></a>
+  <br><br>
 </body>
 </html>
