--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     </a>
   </div>
 </nav><br><br>
+    <p>**For better optimization use "desktop view"in your browser</p>
+    <br><br>
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
       <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
