--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
     <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
      <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
+    <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
     <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
     <a href="Kgf.html"><img  class="demo" src="Kgf.png" alt="Flowers in Chania"></a>
