--- a/Naruto.html
+++ b/Naruto.html
@@ -7,10 +7,20 @@
   <link rel="icon" type="image/x-icon" href="netflix.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300&display=swap" rel="stylesheet">
 </head>
+  <style>
+    .obj {
+      font-family: 'Figtree', sans-serif;
+      
+    }
+  </style>
 <body>
 <br><br>
+  <p class="obj">Will be available tommorrow</p>
+  <br><br>
   <a href=""><button type="button" class="btn btn-light">Episode-1</button></a>
   <br><br>
    <a href=""><button type="button" class="btn btn-light">Episode-2</button></a>
