--- a/Train.html
+++ b/Train.html
@@ -11,6 +11,10 @@
 
   </head>
 <style>
+  body {
+  background-image: url("Train.png");
+  background-repeat: repeat;
+}
 img {
   width: 140px;
   height: 240px;
