--- a/Train.html
+++ b/Train.html
@@ -13,7 +13,7 @@
 <style>
   body {
   background-image: url("Train.png");
-  background-repeat: repeat;
+  background-repeat: no-repeat;
 }
 img {
   width: 140px;
