--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ document.onmouseup = mousehandler;
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
     <a href="Kgf.html"><img  class="demo" src="Kgf.png" alt="Flowers in Chania"></a>
     <br>
-    <div class="alert alert-info" role="alert">
-  Korean-
+   <div class="alert alert-light" role="alert">
+Korean-
 </div>
     <br>
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
@@ -77,24 +77,24 @@ document.onmouseup = mousehandler;
      <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
   <br>   
-  <div class="alert alert-info" role="alert">
-  Indian-
-</div>  
+ <div class="alert alert-light" role="alert">
+Indian-
+</div>
 <br>
     <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
     <a href="Kgf.html"><img  class="demo" src="Kgf.png" alt="Flowers in Chania"></a>
     <br>
-  <div class="alert alert-info" role="alert">
- /Britian American-
-</div>  
+  <div class="alert alert-light" role="alert">
+Britian/American-
+</div>
 <br>  
     <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
     <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
       <br>
-  <div class="alert alert-info" role="alert">
- /Britian Anime-
-</div>  
+ <div class="alert alert-light" role="alert">
+Anime-
+</div>
 <br>
     <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
 </body>
