--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ document.onmouseup = mousehandler;
 </nav><br><br>
     <p>**For better optimization use "desktop view"in your browser</p>
     <br><br>
-    <div class="alert alert-info" role="alert">
-  All
+   <div class="alert alert-dark" role="alert">
+All-
 </div>
     <br>
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
@@ -68,7 +68,7 @@ document.onmouseup = mousehandler;
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
     <a href="Kgf.html"><img  class="demo" src="Kgf.png" alt="Flowers in Chania"></a>
     <br>
-   <div class="alert alert-light" role="alert">
+  <div class="alert alert-dark" role="alert">
 Korean-
 </div>
     <br>
@@ -77,22 +77,22 @@ Korean-
      <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
   <br>   
- <div class="alert alert-light" role="alert">
+<div class="alert alert-dark" role="alert">
 Indian-
 </div>
 <br>
     <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
     <a href="Kgf.html"><img  class="demo" src="Kgf.png" alt="Flowers in Chania"></a>
     <br>
-  <div class="alert alert-light" role="alert">
-Britian/American-
+  <div class="alert alert-dark" role="alert">
+American/Britian-
 </div>
 <br>  
     <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
     <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
       <br>
- <div class="alert alert-light" role="alert">
+<div class="alert alert-dark" role="alert">
 Anime-
 </div>
 <br>
