--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ Indian-
 </div>
 <br>
     <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
+    <a href="Jersey.html".html"><img  class="demo" src="Jersey.png" alt="Flowers in Chania"></a>
     <a href="Kgf.html"><img  class="demo" src="Kgf.png" alt="Flowers in Chania"></a>
     <br>
   <div class="alert alert-dark" role="alert">
