--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ All-
      <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
     <a href="Jersey.html".html"><img  class="demo" src="Jersey.png" alt="Flowers in Chania"></a>
-    <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
+    <a href="Jugg.html"><img  class="demo" src="Jugg.png" alt="Flowers in Chania"></a>
+      <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
     <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
     <a href="Kgf.html"><img  class="demo" src="Kgf.png" alt="Flowers in Chania"></a>
@@ -84,6 +85,7 @@ Indian-
 <br>
     <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
     <a href="Jersey.html".html"><img  class="demo" src="Jersey.png" alt="Flowers in Chania"></a>
+    <a href="Jugg.html"><img  class="demo" src="Jugg.png" alt="Flowers in Chania"></a>
     <a href="Kgf.html"><img  class="demo" src="Kgf.png" alt="Flowers in Chania"></a>
     <br>
   <div class="alert alert-dark" role="alert">
