--- a/Naruto.html
+++ b/Naruto.html
@@ -21,7 +21,8 @@
 <br><br>
   <p class="obj">Will be available tommorrow</p>
   <br><br>
-  <a href=""><button type="button" class="btn btn-light">Episode-1</button></a>
+  <a href="https://drive.google.com/file/d/1-DuC8z5NVF0VFF_-2kEeqc_j5qxBEz3H/view?usp=sharing"><button type="button" class="btn btn-light">Episode-1</button></a>
+  <p class="obj">Will be available tommorrow</p>
   <br><br>
    <a href=""><button type="button" class="btn btn-light">Episode-2</button></a>
   <br><br>
