--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ All-
       <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
     <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
+    <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
     <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
     <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
      <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
@@ -76,6 +77,7 @@ Korean-
     <a href="Allofus.html"><img class="demo"  src="All.png" alt="Flowers in Chania"></a>
      <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
+     <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
   <br>   
 <div class="alert alert-dark" role="alert">
