--- a/Naruto.html
+++ b/Naruto.html
@@ -21,9 +21,9 @@
 <br><br>
   <a href="https://drive.google.com/file/d/1-DuC8z5NVF0VFF_-2kEeqc_j5qxBEz3H/view?usp=sharing"><button type="button" class="btn btn-light">Episode-1</button></a>
   <br><br>
-  <p class="obj">Will be available tommorrow</p>
+   <a href="https://drive.google.com/file/d/1ZP6kqvAHh_GZogwpkN1O76ytVRg2I5Ad/view?usp=sharing"><button type="button" class="btn btn-light">Episode-2</button></a>
+ <p class="obj">Will be available tommorrow</p>
   <br><br>
-   <a href=""><button type="button" class="btn btn-light">Episode-2</button></a>
   <br><br>
    <a href=""><button type="button" class="btn btn-light">Episode-3</button></a>
   <br><br>
